<resources>
    <string name="app_name">Login Form</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Sign_in">Sign in </string>
    <string name="Terms">Terms and Conditions</string>
    <string name="FAQ">FAQ</string>
    <string name="Contact">Contact Us</string>
    <string name="Restore">Restore Purchases</string>
    <string name="Logout">Logout</string>
    <string name="passwordPattern">((?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%]).{6,20})</string>
    <string name="emailPattern">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="validEmailAddress">Valid email address</string>
    <string name="invalidEmail">Invalid email address or password</string>
    <string name="registeredUsername">Application sign in users emails</string>
    <string name="registeredPassword">Registration time</string>
    <string name="userPreferencesKey">User_preferences_key</string>
    <string name="currentTimePreferencesKey">Current_time_preferences_key</string>
    <!-- Registration Form -->
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="save_button">Save Account</string>
    <string name="age">Age</string>
    <string name="save_profile_changes">Your changes have been saved</string>
    <string name="empty_profile_field">Please fill in all the empty fields</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_age">Age</string>
    <string name="selected_email">Your last selected email:\u0020\u0020</string>
    <string name="registration_time">User registration time</string>
    <string name="user_email">User email</string>
    <string name="sessions_time">Sessions time</string>
</resources>
