<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover"
    android:orientation="vertical"
    tools:context="com.hayk.myapplication.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="23dp"
        android:alpha="0.8"
        android:scaleType="centerInside"
        android:src="@drawable/companylogo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="7dp"
            android:ems="11"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_below="@id/editText8"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape"
            android:drawableLeft="@drawable/ic_lock_open_black_24dp"
            android:drawablePadding="7dp"
            android:ems="11"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editText9"
            android:layout_alignRight="@+id/editText9"
            android:layout_below="@id/editText9"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/Sign_in"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/button2"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:alpha="0.8"
            android:background="@color/colorSignIn"
            android:text="@string/Terms" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/button2"
            android:alpha="0.8"
            android:background="@color/colorSignIn"
            android:text="@string/FAQ" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/button3"
            android:alpha="0.8"
            android:background="@color/colorSignIn"
            android:text="@string/Contact" />

        <Button
            android:id="@+id/button5"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button2"
            android:layout_centerHorizontal="true"
            android:alpha="0.8"
            android:background="@color/colorSignIn"
            android:text="@string/Restore" />

    </RelativeLayout>


</LinearLayout>
