<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_profile_background"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/FirstName"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/white"
            android:theme="@style/MyEditTextTheme" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/LastName"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/white"
            android:theme="@style/MyEditTextTheme" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_age_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/user_age"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/white"
            android:theme="@style/MyEditTextTheme" />
    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/logout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp"
            android:background="@drawable/rounded_button_save"
            android:text="@string/save_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/save"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/save"
            android:background="@drawable/rounded_button_logout"
            android:text="@string/Logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>