<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_info_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/profile_first_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profile_first_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/first_name"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/first_name"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/first_name"
            android:gravity="center"
            android:text="@string/profile_last_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profile_last_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/profile_first_name"
            android:layout_toEndOf="@+id/first_name"
            android:layout_toRightOf="@+id/first_name"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/last_name"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/profile_last_name"
            android:gravity="center"
            android:text="@string/profile_age"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profile_age"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/last_name"
            android:layout_toEndOf="@+id/reg_email"
            android:layout_toRightOf="@+id/reg_email"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/age"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/reg_email"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/age"
            android:gravity="center"
            android:text="@string/user_email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/registered_user_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/profile_last_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/profile_last_name"
            android:layout_below="@+id/profile_age"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/reg_email"
            android:background="@color/divider_color" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@color/sessions_time_background"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/sessions_time"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_time_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>